--- a/public/assets/css/aprendiz.css
+++ b/public/assets/css/aprendiz.css
@@ -14,6 +14,15 @@ body{
 
 }
 
+:root {
+  --dark: #5a5a5a;
+  --beige: rgb(203, 199, 199);
+  --green: #39A900;
+  --brown: #8b6932;
+  --white: #ffffff;
+  --black: black;
+}
+
 .navbar{
     background-color: rgb(225, 226, 227);
     
@@ -42,7 +51,7 @@ body{
     background: #f1f1f1;
   }
   ::-webkit-scrollbar-thumb {
-    background: #157347;
+    background: var(--green);
     border-radius: 12px;
     transition: all 0.3s ease;
   }
@@ -53,6 +62,105 @@ body{
 
   th{
     
-    background-color: #157347 !important;
+    background-color: var(--green) !important;
     color: #dedbdb !important;
+  }
+
+  .titulos-perfil{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+
+}
+
+.titulos-perfil h1{
+    text-align: center;
+    /* margin-top: 10px; */
+    color: black;
+    font-weight: bold   ;
+}
+  .form-control{
+    
+    background-color: var(--white);
+    box-sizing: border-box;
+    border-radius: 8px;
+    border: 2px  transparent;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  }
+
+  .contenedor-columnas{
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+    background:var(--white);
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    border-radius: 20px;
+    margin-top: 15px;
+  }
+
+  .cambio-contra{
+    margin-top: -79px;
+    
+  }
+
+
+  @media (max-width: 780px) {
+    .dash-content .boxes .box{
+        width: calc(100% / 2 - 15px);
+        margin-top: 15px;
+    }
+  
+    .info-biometric{
+      display:block;
+    }
+  
+    .contenedor-columnas{
+      display:block;
+    }
+  
+    .info-parrafo{
+      width: auto;
+    }
+  
+  }
+  @media (max-width: 560px) {
+    .dash-content .boxes .box{
+        width: 100% ;
+    }
+  }
+  
+
+  .coolinput {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    position: static;
+    max-width: 240px;
+  }
+  
+  .coolinput label.text {
+    font-size: 1rem;
+    color: var(--dark);
+    font-weight: 700;
+    position: relative;
+    top: 0.5rem;
+    margin: 0 0 0 7px;
+    padding: 0 3px;
+    background: var(--white);
+    width: fit-content;
+  }
+  
+  .coolinput input,select[type=text].input {
+    padding: 11px 10px;
+    font-size: 1rem;
+    border: 2px var(--black) solid;
+    border-radius: 5px;
+    background: #e8e8e8;
+    background-color: #ffffff;
+  }
+  
+  .coolinput input[type=text].input:focus {
+    outline: none;
   }
