--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -153,6 +153,7 @@ form{
     --green: #39A900;
     --brown: #8b6932;
     --white: #ffffff;
+    --black: black;
     --primary-color: #0E4BF1;
     --panel-color: #FFF;
     --text-color: #000;
@@ -286,7 +287,6 @@ form{
     height: 40px;
     background-color: var(--white);
     box-sizing: border-box;
-    font-family: "Montserrat", sans-serif;
     border-radius: 8px;
     border: 2px  transparent;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
@@ -392,7 +392,7 @@ form{
   }
 
   [type=checkbox]:checked + label:before {
-    background: var(--brown);
+    background: var(--green);
   }
 
   /* checked mark aspect */
@@ -816,3 +816,86 @@ input[type="file"]::file-selector-button:active {
 }
 
 /* -------------Contacto----------------- */
+
+
+.contenedor-columnas{
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+  background:var(--white);
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  border-radius: 20px;
+  margin-top: 15px;
+}
+
+.cambio-contra{
+  margin-bottom:100px;
+  
+}
+
+.cambiar{
+  margin-top: 5px;
+}
+
+
+@media (max-width: 780px) {
+  .dash-content .boxes .box{
+      width: calc(100% / 2 - 15px);
+      margin-top: 15px;
+  }
+
+  .info-biometric{
+    display:block;
+  }
+
+  .contenedor-columnas{
+    display:block;
+  }
+
+  .info-parrafo{
+    width: auto;
+  }
+
+}
+@media (max-width: 560px) {
+  .dash-content .boxes .box{
+      width: 100% ;
+  }
+}
+
+
+.coolinput {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  position: static;
+  max-width: 240px;
+}
+
+.coolinput label.text {
+  font-size: 1rem;
+  color: var(--dark);
+  font-weight: 700;
+  position: relative;
+  top: 0.5rem;
+  margin: 0 0 0 7px;
+  padding: 0 3px;
+  background: var(--white);
+  width: fit-content;
+}
+
+.coolinput input,select[type=text].input {
+  padding: 11px 10px;
+  font-size: 1rem;
+  border: 2px var(--black) solid;
+  border-radius: 5px;
+  background: #e8e8e8;
+  background-color: #ffffff;
+  
+}
+
+.coolinput input[type=text].input:focus {
+  outline: none;
+}
