--- a/public/assets/css/aprendiz.css
+++ b/public/assets/css/aprendiz.css
@@ -24,14 +24,65 @@ body{
 }
 
 .navbar{
-    background-color: rgb(225, 226, 227);
+  background-color: #ebebe6;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+}
+
+.navbar a{
+  text-decoration: none;
+  color: inherit;
+}
+
+.logo{
+  margin-right: 50px;
+}
+
+.list{
+  list-style: none;
+  display: flex;
+  gap: 25px;
+}
+
+#toggler,
+.navbar label{
+  display: none;
+}
+
+@media screen and 
+(max-width: 600px){
+  .menu{
+    width: 100%;
+    max-height: 0;
+    overflow: hidden;
+  }
+  
+  .list{
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+
+  .navbar label{
+    display: inline-flex;
+    align-items: center;
+    cursor: pointer;
+  }
+
+  #toggler:checked~ .menu{
+    max-height: 100%;
     
+  }
 }
 
 .titulos{
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    margin-bottom: 15px;
 
 }
 
@@ -40,6 +91,7 @@ body{
     /* margin-top: 10px; */
     color: black;
     font-weight: bold   ;
+    
 }
 
 /* --------------Tabla-------------- */
@@ -79,6 +131,34 @@ body{
     color: black;
     font-weight: bold   ;
 }
+
+.content{
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  max-width: 800px;
+  height: 350px;
+  background-color: #dedbdb;
+  margin: auto;
+  padding: 30px 0;
+  border-radius: 8px;
+  color: #0a0a0b;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  font-weight:bold;
+} 
+
+.form-control2{
+ 
+  width: 98%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  height: 40px;
+  background-color: var(--white);
+  box-sizing: border-box;
+  border-radius: 8px;
+  border: 2px  transparent; 
+  padding: 3px;
+}
+
   .form-control{
     
     background-color: var(--white);
