--- a/public/assets/css/aprendiz.css
+++ b/public/assets/css/aprendiz.css
@@ -1,4 +1,4 @@
-*{
+ eñ*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -168,6 +168,8 @@ body{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   }
 
+  /* --------contacto--------- */
+
   .contenedor-columnas{
     width: 80%;
     display: flex;
@@ -184,6 +186,7 @@ body{
     margin-top: -79px;
     
   }
+  
 
 
   @media (max-width: 780px) {
@@ -211,7 +214,6 @@ body{
     }
   }
   
-
   .coolinput {
     display: flex;
     flex-direction: column;
