--- a/public/assets/css/inst.css
+++ b/public/assets/css/inst.css
@@ -114,7 +114,7 @@ overflow-y: scroll;
 }
 
 .form-control{
-    
+    width: 98%;
     background-color: var(--white);
     box-sizing: border-box;
     border-radius: 8px;
@@ -145,7 +145,7 @@ overflow-y: scroll;
 
   form{
     margin-left: 10px;
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     align-items: center;
     
@@ -153,6 +153,7 @@ overflow-y: scroll;
 
   .visualizar{
     margin-bottom: 20px;
+    display: flex;
   }
 
   /* .form-control2{
@@ -187,7 +188,7 @@ overflow-y: scroll;
     }
 
     .form-control3{
- 
+      
       width: 50%;
       box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
       height: 40px;
@@ -197,6 +198,10 @@ overflow-y: scroll;
       border: 2px  transparent; 
       padding: 5px;
       margin-bottom: 30px;
+    }
+
+    .marcar{
+      display: flex;
     }
 
     .qr{
@@ -227,7 +232,7 @@ overflow-y: scroll;
   
 
   .contenedor-columnas{
-    
+    width: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -265,6 +270,10 @@ overflow-y: scroll;
 
     .roles{
       margin-bottom: 20px;
+    }
+
+    .visualizar{
+      display: block;
     }
   
   }
@@ -307,9 +316,7 @@ overflow-y: scroll;
     outline: none;
   }
 
-  .roles{
-
-  }
+  
 
   
 
